@startuml ehr-datamodel

skinparam Shadowing 1.0
' avoid problems with angled crows feet
skinparam linetype ortho

scale max 1100 width

title
Modèle de donnée du DPI
end title

' Entity styling
!define TABLE(name) entity name
!define PK(field) <b><u>field</u></b>
!define FK(field) <i>field</i>

' =====================================================
' CORE PATIENT AND ENCOUNTER DATA
' =====================================================

TABLE(patient) {
  PK(patient_id) : BIGSERIAL
  --
  ' Identity fields (linkId: 2958000860428)
  nom : VARCHAR(255)
  prenom : VARCHAR(255)
  nir : VARCHAR(15)
  ins : VARCHAR(50)
  date_naissance : DATE
  sexe : VARCHAR(20)
  date_deces : DATE
  source_deces : VARCHAR(50)
  rang_gemellaire : INTEGER
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

TABLE(patient_adresse) {
  PK(patient_adresse_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  --
  ' Geocoding fields (linkId: 3816475533472)
  latitude : DECIMAL(10,7)
  longitude : DECIMAL(10,7)
  code_iris : VARCHAR(20)
  libelle_iris : VARCHAR(200)
  code_geographique_residence : VARCHAR(10)
  libelle_geographique_residence : VARCHAR(200)
  date_recueil : DATE
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

TABLE(donnees_pmsi) {
  PK(pmsi_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  --
  ' Core PMSI fields
  mode_sortie : VARCHAR(100)
  age_admission : INTEGER
  date_debut_sejour : DATE
  date_fin_sejour : DATE
  mode_entree : VARCHAR(100)
  --
  ' Healthcare facility information
  etablissement : VARCHAR(255)
  service : VARCHAR(255)
  unite_fonctionnelle : VARCHAR(255)
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

' =====================================================
' MEDICAL EVENTS AND PROCEDURES
' =====================================================

TABLE(diagnostics) {
  PK(diagnostic_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  FK(pmsi_id) : BIGINT
  --
  ' Diagnostic information (linkId: 9391816419630)
  code_diagnostic : VARCHAR(20)
  type_diagnostic : VARCHAR(50)
  libelle_diagnostic : TEXT
  date_recueil : DATE
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

TABLE(actes) {
  PK(acte_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  FK(pmsi_id) : BIGINT
  --
  ' Act/procedure information (linkId: 591926901726)
  code_acte : VARCHAR(20)
  libelle_acte : TEXT
  date_acte : TIMESTAMP
  executant : VARCHAR(255)
  date_recueil : DATE
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

' =====================================================
' CONSOLIDATED LABORATORY DATA
' =====================================================

TABLE(biologie) {
  PK(biologie_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  --
  ' Test identification - consolidated biology table
  code_loinc : VARCHAR(20)
  libelle_test : VARCHAR(255)
  type_examen : VARCHAR(100)
  --
  ' Test results
  valeur : DECIMAL(15,6)
  unite : VARCHAR(50)
  valeur_texte : TEXT
  --
  ' Test context and timing
  date_prelevement : TIMESTAMP WITH TIME ZONE
  statut_validation : VARCHAR(50)
  --
  ' Reference ranges
  borne_inf_normale : DECIMAL(15,6)
  borne_sup_normale : DECIMAL(15,6)
  --
  ' Quality information
  laboratoire : VARCHAR(255)
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

' =====================================================
' MEDICATION AND TREATMENT DATA
' =====================================================

TABLE(prescription) {
  PK(prescription_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  --
  ' Medication identification
  prescripteur : VARCHAR(50)
  denomination : VARCHAR(255)
  code_atc : VARCHAR(20)
  voie_administration : VARCHAR(100)
  --
  ' Temporal information
  date_prescription : DATE
  date_debut_prescription : DATE
  date_fin_prescription : DATE
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

TABLE(posologie) {
  PK(posologie_id) : BIGSERIAL
  FK(prescription_id) : BIGINT
  --
  ' Posology details (linkId: 6348237104421)
  nombre_prises_par_jour : INTEGER
  quantite : DECIMAL(10,3)
  unite_quantite : VARCHAR(20)
  date_heure_debut : TIMESTAMP
  date_heure_fin : TIMESTAMP
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

TABLE(administration) {
  PK(administration_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  FK(prescription_id) : BIGINT
  --
  ' Medication identification
  denomination : VARCHAR(255)
  code_atc : VARCHAR(20)
  voie_administration : VARCHAR(100)
  --
  ' Quantity information
  quantite : DECIMAL(10,3)
  unite_quantite : VARCHAR(20)
  --
  ' Temporal information
  date_heure_debut : TIMESTAMP
  date_heure_fin : TIMESTAMP
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

' =====================================================
' CLINICAL CARE AND LIFESTYLE DATA
' =====================================================

TABLE(dossier_soins) {
  PK(soin_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  --
  ' Physical measurements (linkId: 305831246173)
  code_loinc : VARCHAR(20)
  libelle_test : VARCHAR(255)
  valeur : DECIMAL(15,6)
  unite : VARCHAR(50)
  valeur_code : VARCHAR(50)
  valeur_texte : TEXT
  date_mesure : DATE
  --
  ' Measurement context
  unite_soins : VARCHAR(255)
  professionnel : VARCHAR(255)
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

TABLE(style_vie) {
  PK(style_vie_id) : BIGSERIAL
  FK(patient_id) : BIGINT
  --
  ' Lifestyle factors (linkId: 1693164086678)
  consommation_tabac : VARCHAR(100)
  consommation_alcool : VARCHAR(100)
  consommation_autres_drogues : VARCHAR(100)
  activite_physique : VARCHAR(100)
  date_recueil : DATE
  --
  ' Audit fields
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

' =====================================================
' RELATIONSHIPS
' =====================================================

' Core patient relationships
patient ||--o{ patient_adresse : "patient_id"
patient ||--o{ donnees_pmsi : "patient_id"

' Medical events linked to encounters and patients
patient ||--o{ diagnostics : "patient_id"
patient ||--o{ actes : "patient_id"
donnees_pmsi ||--o{ diagnostics : "pmsi_id"
donnees_pmsi ||--o{ actes : "pmsi_id"

' Laboratory data - linked to patient only
patient ||--o{ biologie : "patient_id"

' Medication hierarchy
patient ||--o{ prescription : "patient_id"
prescription ||--o{ posologie : "prescription_id"
prescription ||--o{ administration : "prescription_id"

' Additional patient relationships for medication
patient ||--o{ administration : "patient_id"

' Clinical care and lifestyle data
patient ||--o{ dossier_soins : "patient_id"
patient ||--o{ style_vie : "patient_id"

@enduml